<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gl.calculatebmi.CalculateBMIMainActivity">

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="38dp"
        android:text="@string/tv_height"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tv_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_weight"
        android:layout_marginTop="92dp"
        android:text="@string/tv_weight"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/et_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_height"
        android:layout_toEndOf="@+id/textView5"
        android:ems="6"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/et_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_height"
        android:layout_toEndOf="@+id/textView5"
        android:ems="6"
        android:maxLength="3"
        android:inputType="numberDecimal"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tv_cm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView4"
        android:layout_alignTop="@+id/tv_weight"
        android:text="@string/tv_m"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_height"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignTop="@+id/tv_height"
        android:text="@string/tv_kg"
        android:textSize="20dp" />

    <Button
        android:id="@+id/b_calculate_BMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_weight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:background="@drawable/button_bg_round"
        android:text="@string/b_calculate"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_alignTop="@+id/textView5"
        android:layout_toEndOf="@+id/b_calculate_BMI"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/b_calculate_BMI"
        android:layout_marginTop="24dp"
        android:fontFamily=""
        android:text="@string/tv_calculate_BMI"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#520861"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_show_BMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="38dp" />

    <TextView
        android:id="@+id/tvEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/tv"
        android:textSize="20dp"



        />


</RelativeLayout>
